# nback

./: .gitignore  Makefile  README.md  default.nix  nback.cabal  pinned.nix  release.nix  stack.yaml
.circleci/: config.yml
app/: Main.hs
nix/: proteaaudio.nix
src/: Audio.hs  Chart.hs  Constants.hs  State.hs
test/: Spec.hs
