cabal-version:       2.0
name:                nback
version:             0.1.0
synopsis:            See README for more info
description:         See README for more info
license:             UNLICENSE
license-file:        UNLICENSE
author:              Konstantinos Sideris
maintainer:          siderisk@auth.gr
copyright:           2019 Konstantinos Sideris
category:            Game
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

executable nback
  hs-source-dirs:      app
                     , src
  other-modules:       State
                     , Constants
                     , Audio
                     , Chart
                     , Paths_nback
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , Chart
                     , Chart-diagrams
                     , aeson
                     , brick
                     , bytestring
                     , colour
                     , containers
                     , data-default-class
                     , directory
                     , file-embed
                     , microlens
                     , microlens-th
                     , optparse-applicative
                     , proteaaudio
                     , random
                     , random-shuffle
                     , strict
                     , text
                     , time
                     , vty

  ghc-options:         -Wall
                       -O2
                       -Wno-type-defaults
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010


test-suite nback-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       State
                     , Audio
                     , Constants

  build-depends:       base ^>= 4.12.0.0
                     , tasty
                     , aeson
                     , time
                     , directory
                     , strict
                     , random
                     , random-shuffle
                     , tasty-hunit
                     , containers
                     , bytestring
                     , file-embed
                     , proteaaudio

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
